--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -17,8 +17,11 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        width: 10vw;
         height: 100%;
+
+        :last-child {
+            padding-left: 5px;
+        }
     }
 }
 
