--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -1,7 +1,9 @@
 .header {
     padding: 0;
     margin: 0;
-    background-color: #D9D9D9;
+    background: #370365;
+
+    color: #FFFFFF;
 
     height: 8vh;
 
