--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: radial-gradient(
+    187.1% 106.34% at 73.12% 48.68%,
+    #370365 0%,
+    #06011f 52.08%
+  );
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 a {
